--- a/cloud/functions/FIND_NEWS/package.json
+++ b/cloud/functions/FIND_NEWS/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "launchPage",
+    "name": "FIND_NEWS",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -8,5 +8,7 @@
     },
     "author": "",
     "license": "ISC",
-    "dependencies": {}
+    "dependencies": {
+        "wx-server-sdk": "^1.8.2"
+    }
 }
